--- a/style.css
+++ b/style.css
@@ -4,14 +4,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("https://res.cloudinary.com/di3qzyeke/image/upload/v1676436714/casados_u6p5z8.jpg");
-  background-image: no-repeat;
-background-image: fixed;
-background-image: center;
--webkit-background-size: contain;
--moz-background-size: contain;
--o-background-size: contain;
-background-size: contain;
+  background: linear-gradient(358.3deg, rgb(255, 82, 168) 12.9%, rgb(177, 118, 240) 134.3%);
+
   font-family: 'Mochiy Pop P One', sans-serif;
 }
 input#open {
@@ -20,38 +14,39 @@ input#open {
 
 .valentines-day-card {
   position: relative;
+  margin: 0 auto;
   width: 300px;
-  height:300px;
+  height:600px;
   transform-style: preserve-3d;
-	transform: perspective(2500px);
+  transform: perspective(2500px);
   transition: .3s;
+  border-radius: .5rem;
 }
 
 .card-front {
   position: relative;
-  background-color: #fff0f3;
+  background-image: url("https://res.cloudinary.com/di3qzyeke/image/upload/v1676436714/casados_u6p5z8.jpg");
+  background-image: no-repeat;
+  background-image: center;
+  background-size: cover;
   width: 300px;
-  height:300px;
+  height:600px;
   transform-origin: left;
-  box-shadow: inset 100px 20px 100px rgba(0,0,0,.15), 30px 0 50px rgba(0,0,0,0.3);
+  /* box-shadow: inset 100px 20px 100px rgba(0,0,0,.15), 30px 0 50px rgba(0,0,0,0.3); */
   transition: .3s;
+  color: #fff0f3;
 }
 
-.card-front:before {
-  content:"";
-  position: absolute;
-  width: 280px;
-  height: 280px;
-  background-color: #d04e4e;
-  top: 10px;
-  left: 10px;
-}
 
 .card-inside {
   position: absolute;
-  background-color: #fff0f3;
+  background-image: url("https://res.cloudinary.com/di3qzyeke/image/upload/v1676436714/casados_u6p5z8.jpg");
+  background-image: no-repeat;
+  background-image: center;
+  background-size: cover;
+  margin-left: 10px solid white;
   width: 300px;
-  height:300px;
+  height:600px;
   z-index:-1;
   left:0;
   top:0;
@@ -61,7 +56,7 @@ input#open {
 .open {
   position: absolute;
   width: 300px;
-  height:300px;
+  height:600px;
   left:0;
   top:0;
   background-color: transparent;
@@ -70,32 +65,47 @@ input#open {
 }
 
 #open:checked ~ .card-front {
-  transform: rotateY(-155deg);
+  transform: rotateY(-180deg);
   box-shadow: inset 100px 20px 100px rgba(0,0,0,.13), 30px 0 50px rgba(0,0,0,0.1);
+  
 }
 
 #open:checked ~ .card-front:before {
   z-index:5;
-  background-color: #fff0f3;
+  background-image: url("https://res.cloudinary.com/di3qzyeke/image/upload/v1676436714/casados_u6p5z8.jpg");
+  background-image: no-repeat;
+  background-image: center;
+  background-size: cover;
   width:300px;
-  height:300px;
+  height:600px;
   top:0;
   left:0;
   box-shadow: inset 100px 20px 100px rgba(0,0,0,.1), 30px 0 50px rgba(0,0,0,0.1);
 }
+
+#open:checked ~ .card-front .note, #open:checked ~ .card-front .footer-note  {
+    display: none;
+  }
+
 .note {
   position: relative;
   width: 200px;
   height: 150px;
-  background-color: #fff0f3;
+  /* background-color: #fff0f3; */
   top:75px;
   left:50px;
-  color: #333;
+  color: #f7f1f1;
   font-size:30px;
   display: flex;
   align-items: center;
   text-align: center;
-  filter: drop-shadow(0 0 20px rgba(0,0,0,0.3));
+  /* filter: drop-shadow(0 0 20px rgba(0,0,0,0.3)); */
+}
+
+.footer-note{
+  position: absolute;
+  bottom: 10%;
+  padding: 1rem;
 }
 
 .note:before, .note:after {
@@ -120,11 +130,14 @@ input#open {
 }
 .text-one {
   position: absolute;
-  color: #333;
+  color: #f2eded;
   font-size: 30px;
   top:30px;
-  width:300px;
-  text-align: center;
+  width:260px;
+  text-align: justify;
+  font-size: 1rem;
+  padding: 1rem;
+  z-index: 5;
 }
 
 .text-one:before, .text-one:after {
@@ -134,23 +147,12 @@ input#open {
   width:300px;
 }
 
-.text-one:before {
-  content:"San Valentin";
-  top:30px;
-  color: #d04e4e;
-}
-
-.text-one:after {
-  content:"Te amo Franffy";
-  top:60px;
-}
-
 .heart {
-  position: relative;
+  position: absolute;
   background-color: #d04e4e;
   height: 60px;
   width:60px;
-  top:180px;
+  bottom:20px;
   left:120px;
   transform: rotate(-45deg);
   animation: .8s beat infinite;
@@ -175,42 +177,7 @@ input#open {
   top:0;
 }
 
-.smile {
-  position: absolute;
-  width:30px;
-  height:15px;
-  background-color: #333;
-  z-index:1;
-  border-radius: 0 0 100px 100px;
-  top:200px;
-  left:135px;
-  overflow: hidden;
-}
 
-.smile:before {
-  content:"";
-  position: absolute;
-  border-radius:50%;
-  width:20px;
-  height:20px;
-  background-color: #030202;
-  top:5px;
-  left:5px;
-}
-
-.eyes {
-  position: absolute;
-  border-radius: 50%;
-  background-color: #333;
-  width:10px;
-  height:10px;
-  z-index:1;
-  top:190px;
-  left:165px;
-  box-shadow: -40px 0 #333;
-  transform-origin: 50%;
-  animation: close 2s infinite;
-}
 
 @keyframes close {
     0%, 100% {
